--- a/lang/fr_CA.po
+++ b/lang/fr_CA.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: vtx\n"
 "POT-Creation-Date: 2020-11-13 14:23-0500\n"
-"PO-Revision-Date: 2020-11-13 14:25-0500\n"
+"PO-Revision-Date: 2020-11-17 11:21-0500\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: fr_CA\n"
@@ -1042,12 +1042,12 @@ msgstr ""
 #: templates/footer.php:3
 msgctxt "copyrights footer"
 msgid "All rights reserved."
-msgstr ""
+msgstr "Tous droits réservés."
 
 #: templates/footer.php:3
 msgctxt "copyrights footer"
 msgid "Web agency"
-msgstr ""
+msgstr "Agence web"
 
 #: templates/form/fselect.php:41
 msgctxt "Fieldset Legend"
